--- a/weibo.yaml
+++ b/weibo.yaml
@@ -4,7 +4,7 @@ db:
     port: 27017
 
 login:
-    - username: luckistmaomao@gmail.com
-      password: yzt112233zhang
+    - username: luckistmaomao@126.com
+      password: weibo112233
 
 cookie_file: weibo_login_cookies.dat
